--- a/all_bookmarks.css
+++ b/all_bookmarks.css
@@ -53,52 +53,42 @@ body {
   background: #9b59ff;
 }
 
-/* Delete Button */
-.delete-button {
-  background-color: #faaeae;
-  color: white;
-  border: none;
-  padding: 6px 12px;
-  margin-left: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
-  background-color: #dc3545;
-  color: white;
-}
-
-/* Hover Effect on Delete Button */
-.delete-button:hover {
-  background-color: #cc0000;
-  transform: scale(1.1);
-  background-color: #c82333;
-}
-
-/* Play Button */
-.play-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 6px 12px;
-  border-radius: 5px;
-  text-align: center;
-  cursor: pointer;
-  text-decoration: none;
-  transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
-  background-color: #28a745;
-  color: white;
-}
-
-.play-button:hover {
-  background-color: #388e3c;
-  transform: scale(1.1);
-}
-
 /* Storage Usage Container */
 .storage-container {
   margin-top: 15px;
   font-size: 15px;
   color: #d1e0e0;
   text-align: center;
+}
+
+.delete-button,
+.play-button {
+  color: white;
+  text-decoration: none;
+  border: none;
+  padding: 6px 12px;
+  margin-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.delete-button {
+  background-color: #dc3545;
+}
+
+.play-button {
+  background-color: #4caf50;
+}
+
+.delete-button:hover {
+  background-color: #cc0000;
+  transform: scale(1.1);
+}
+
+.play-button:hover {
+  background-color: #388e3c;
+  transform: scale(1.1);
 }
 
 /* Storage Bar */
